# FunBox

./: .gitignore  AGENTS.md  inspo-academic-industry.md  inspo.md
scratch/: CMakeLists.txt
scratch/harness/: sim_main.cpp  sim_runner.cpp  sim_runner.h  wav_io.h
scratch/include/: daisy_seed.h
scratch/include/hid/: encoder.h  midi.h
scratch/src/: mock_gpio.cpp  mock_parameter.cpp  mock_switch.cpp
scratch/tests/: test_compile.cpp  test_harness.cpp  test_wav_io.cpp
software-old/Template/: template.cpp
software/Boca/: README.md  boca.cpp
software/Boca/lib/: envelope_filter.h  formant_filter.h  mathutils.h  xfade.h
software/Cenote/: cenote.cpp
software/ChivoDub/: ChivoDub.cpp
software/ChivoDub/lib/: delay.h  mathutils.h
software/GuitarSynth/: README.md  guitarsynth.cpp
software/GuitarSynth/lib/: envelope_follower.h  poly_pitch.h  synth_voice.h
software/SubNUp/: README.md  subnup.cpp
software/SubNUp/lib/: band_shifter.h  biquad.h  fast_math.h  mathutils.h  multirate.h  octave_engine.h  ring_buffer.h
software/WaveCrush/: README.md  WaveCrush.cpp
software/pedro-lorenzo-lopez/: README.md  pll.cpp
software/pedro-lorenzo-lopez/lib/: envelope_follower.h  pitch_tracker.h  pll_synth_voice.h  voice_mixer.h
software/sim/: CMakeLists.txt  README.md
software/sim/harness/: sim_main.cpp
software/sim/include/: daisy_core.h  daisy_petal.h
software/sim/include/hid/: audio.h  ctrl.h  led.h  parameter.h  switch.h
software/sim/include/per/: gpio.h
software/sim/include/sys/: system.h
software/sim/src/: mock_ctrl.cpp  mock_petal.cpp  mock_seed.cpp  mock_switch.cpp  mock_system.cpp
software/sim/tests/: test_boca_envelope.cpp  test_controls.cpp  test_daisysp.cpp
